--- a/PolyEngine/PolyEngine.vcxproj
+++ b/PolyEngine/PolyEngine.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="src\PolyEngine\Log.h" />
     <ClInclude Include="src\PolyEngine\MouseButtonCodes.h" />
     <ClInclude Include="src\PolyEngine\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\PolyEngine\Renderer\Shader.h" />
     <ClInclude Include="src\PolyEngine\Window.h" />
     <ClInclude Include="src\pepch.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
@@ -594,6 +595,7 @@
     <ClCompile Include="src\pepch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\PolyEngine\Renderer\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
