--- a/PolyEngine/PolyEngine.vcxproj
+++ b/PolyEngine/PolyEngine.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\PolyEngine.h" />
@@ -588,6 +589,7 @@
   <ItemGroup>
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\PolyEngine\Core\Application.cpp" />
