--- a/PolyEngine/PolyEngine.vcxproj.filters
+++ b/PolyEngine/PolyEngine.vcxproj.filters
@@ -1353,6 +1353,7 @@
     <ClInclude Include="src\PolyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Renderer.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsInput.cpp">
@@ -1387,5 +1388,6 @@
     <ClCompile Include="src\PolyEngine\Renderer\Buffer.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.cpp" />
   </ItemGroup>
 </Project>
