--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "PolyEngine/vendor/spdlog"]
 	path = PolyEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+	branch = v1.x
 [submodule "PolyEngine\\vendor\\imgui"]
 	path = PolyEngine\\vendor\\imgui
 	url = https://github.com/DominicMause/imgui
+	branch = docking
 [submodule "PolyEngine\\vendor\\glm"]
 	path = PolyEngine\\vendor\\glm
 	url = https://github.com/g-truc/glm
+	branch = master
 [submodule "PolyEngine\\vendor\\GLFW"]
 	path = PolyEngine\\vendor\\GLFW
 	url = https://github.com/DominicMause/glfw
+	branch = main
